// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsScrapReasonOverview > renders correctly 1`] = `
<settings-entities-overview-stub
  arecolsloading="false"
  arerowsclickable="true"
  caneditgroups="true"
  customviews=""
  entityname="scrapReason"
  filterconfiguration="[object Map]"
  groupdeletefn="[Function]"
  groupfields="name,color,local,translations,tags"
  groups="[object Object],[object Object]"
  hasgroupview="true"
  hideresetbtn="false"
  isdeletinggroupinprogress="false"
  items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  languagetextentity="scrap_reason_group"
  loading="false"
  menuitems=""
  namefield="primaryName"
  navigatetoeditroute="true"
  openpanelsonfilter="true"
  overviewheader="Scrap reasons"
  primarybtntext="Reason"
  saveactionname="saveScrapReasonGroup"
  secondarybtntext="Group"
  showdragicon="true"
  showemptygroups="true"
  showglobalgroupsicon="true"
  showgroupitemscount="true"
  statuskey="enabled"
  tableheaders="[object Object],[object Object],[object Object],[object Object],[object Object]"
  togglebtnvalue="list"
  usebackendfiltering="false"
/>
`;

exports[`SettingsScrapReasonOverview > renders correctly if userHasGlobalGroupsIcon is false 1`] = `
<settings-entities-overview-stub
  arecolsloading="false"
  arerowsclickable="true"
  caneditgroups="true"
  customviews=""
  entityname="scrapReason"
  filterconfiguration="[object Map]"
  groupdeletefn="[Function]"
  groupfields="name,color,local,translations,tags"
  groups="[object Object],[object Object]"
  hasgroupview="true"
  hideresetbtn="false"
  isdeletinggroupinprogress="false"
  items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
  languagetextentity="scrap_reason_group"
  loading="false"
  menuitems=""
  namefield="primaryName"
  navigatetoeditroute="true"
  openpanelsonfilter="true"
  overviewheader="Scrap reasons"
  primarybtntext="Reason"
  saveactionname="saveScrapReasonGroup"
  secondarybtntext="Group"
  showdragicon="true"
  showemptygroups="true"
  showglobalgroupsicon="false"
  showgroupitemscount="true"
  statuskey="enabled"
  tableheaders="[object Object],[object Object],[object Object],[object Object],[object Object]"
  togglebtnvalue="list"
  usebackendfiltering="false"
/>
`;
